# europa-os

./: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md  initrd.img  limine.cfg  linker.ld  rust-toolchain.toml
.cargo/: config.toml
scripts/: bootstrap-limine  build-iso  qemu
src/: allocator.rs  bitmap.rs  idt.rs  init.rs  initrd.rs  main.rs  memory.rs  panic.rs  pic.rs  pit.rs  print.rs  stivale.rs
src/memory/: allocator.rs  memory_finder.rs  mod.rs  paging.rs
src/paging/: mod.rs
src/pci/: mod.rs
src/scheduling/: mod.rs  process.rs  registers.rs  scheduler.rs  thread.rs
