[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

[dependencies]
stivale-boot = "0.2.6"
lateinit = "0.2.0"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic